test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude/chainsaw-step-01-apply-1-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-b
  namespace: ns-multiple-rules-match-exclude
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx
    name: nginx
