test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude/chainsaw-step-01-apply-1-5.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-multiple-rules-match-exclude
spec:
  mutateExistingOnPolicyUpdate: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              policy.lan/flag: "true"
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            policy.lan/apply-flag: "true"
      targets:
      - apiVersion: v1
        kind: Pod
        namespace: '{{ request.object.metadata.name }}'
    name: apply-flag
  - exclude:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              policy.lan/flag: "true"
    match:
      any:
      - resources:
          kinds:
          - Namespace
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            policy.lan/remove-flag: "true"
      targets:
      - apiVersion: v1
        kind: Pod
        namespace: '{{ request.object.metadata.name }}'
    name: remove-flag
