test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-multiple-rules-match-exclude
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
