test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude/02-script.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script
spec:
  timeouts: {}
  try:
  - command:
      args:
      - label
      - ns
      - ns-multiple-rules-match-exclude
      - policy.lan/flag-
      entrypoint: kubectl
