test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/multiple-rules-match-exclude/03-check.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: check
spec:
  timeouts: {}
  try:
  - assert:
      file: pod-good.yaml
  - error:
      file: pod-bad.yaml
